--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,18 @@
 </head>
 
 <body>
-
-    {% block content %} put your content here {% endblock %}
+  <div>
+      {% with messages = get_flashed_messages() %}
+      {% for message in messages %}
+      <div class="alert alert-info alert-dismissable fade in">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+          {{ message }}
+      </div>
+      {% endfor %}
+      {% endwith %}
+  </div>
+  
+  {% block content %} put your content here {% endblock %}
 
 
 <!-- Load pre-made scripts from vendors -->
