Configure admin log-in

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,8 @@
 <h1>SFMTA Resolutions</h1>
 <h2>please enter the password</h2>
 
-    <form action="/login" method="POST" id="sign-in form">
-    	<input id="username" name="username" placeholder="Username" required>
+    <form action="/login" method="POST">
+    	<input id="username" type="text" name="username" placeholder="Username" required>
         <br>
         <input id="password" type="password" name="password" placeholder="Password" required>
         <br>
